2013-12-12  Gerrit Holl  <gerrit.holl@smhi.se>

	* pyatmlab-0-0-2

	* pyatmlab/io.py: Improve docs

	* setup.py: Automagically obtain version, fix e-mail addy

2013-12-12  Gerrit Holl  <gerrit.holl@smhi.se>

	* pyatmlab-0-0-1

	* LICENSE: Fixed name, added e-mail.

	* doc/Makefile, doc/source/conf.py: Added, made by sphinx

	* doc/source/index.rst: Added.  First docs, initiateted by sphinx.

	* pyatmlab/config.py: Added.  Started configuration framework.

	* pyatmlab/io.py: Added.  Copied Chevallier reading from PyARTS.

	* pyatmlab/setup.py: Added, made by setuptools.