@@ -55,10 +55,11 @@ copyright = '2013, Gerrit Holl'
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
+from pyatmlab.tools import get_version
 # The short X.Y version.
-version = '0.0'
+version = get_version(os.path.join(os.path.dirname(__file__), os.pardir, os.pardir, 'ChangeLog'))
 # The full version, including alpha/beta/rc tags.
-release = '0.0.0'
+release = version
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
